--- a/public/post.html
+++ b/public/post.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
-  <html>
+  <html style="padding:25px">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <body>
-  <h1>Make a post</h1>
-  <form>
-    <div>
-      <label for="title">Title:</label>
-      <input name="title" id="title">
+  <h2>Make a post</h2>
+  <br>
+  <form id="postForm">
+    <div class="form-group row mb-3">
+      <label for="title" class="col-sm-1 col-form-label col-form-label-sm">Title</label>
+      <div class="col-sm-3">
+        <input class="form-control form-control-sm" name="title" id="title" type="text">
+      </div>
     </div>
-    <div>
-      <label for="username">Username:</label>
-      <input name="username" id="username">
+    <div class="form-group row mb-3">
+      <label for="username" class="col-sm-1 col-form-label col-form-label-sm">Username</label>
+      <div class="col-sm-3">
+        <input class="form-control form-control-sm" name="username" id="username" type="text">
+      </div>
     </div>
-    <div>
-      <label for="content">Post:</label>
-      <input name="content" id="content">
+    <div class="form-group row mb-4">
+      <label for="content" class="col-sm-1 col-form-label col-form-label-sm">Content</label>
+      <div class="col-sm-3">
+        <textarea class="form-control form-control-sm" name="content" id="content" rows="3"></textarea>
+      </div>
     </div>
-    <div>
-      <button type="submit">Post</button>
-    </div>
-    <div>
-        <a href="/">Go back</a>
-    </div>
+    <button type="submit" class="btn btn-outline-success btn-sm mb-2">Submit</button>
   </form>
+  <a href="/">Go back</a>
   <script>
-    function handleSubmit(event) {
-        event.preventDefault();
-        const data = new FormData(event.target);
-        const value = Object.fromEntries(data.entries());
-        fetch("https://hiringproj.01apoorv719.workers.dev/posts",
-        {
-            headers: {
-            'Accept': 'application/json',
-            'Content-Type': 'application/json'
-            },
-            method: "POST",
-            body: JSON.stringify(value)
-        })
+    handleSubmit = async (event) =>  {
+      event.preventDefault();
+      const data = new FormData(event.target);
+      const value = Object.fromEntries(data.entries());
+      await fetch("https://hiringproj.01apoorv719.workers.dev/posts",
+      {
+          headers: {
+          'Accept': 'application/json',
+          'Content-Type': 'application/json'
+          },
+          method: "POST",
+          body: JSON.stringify(value)
+      })
+      document.getElementById("postForm").reset();
     }
     const form = document.querySelector('form');
     form.addEventListener('submit', handleSubmit);
